--- a/fibb-o-nate/src/styles/screen.scss
+++ b/fibb-o-nate/src/styles/screen.scss
@@ -25,8 +25,11 @@ ul.fibbs {
     margin: 0.1em;
     padding: 0.2em;
     font-family: monospace;
+    font-size: 0.5em;
+    line-height: 1em;
     color: #fff;
     text-shadow: 1px 1px 0 #333;
     border-radius: 2px;
+    overflow: hidden;
   }
 }
