--- a/jabberdexicon-rebase/src/styles/screen.scss
+++ b/jabberdexicon-rebase/src/styles/screen.scss
@@ -25,3 +25,20 @@ body {
   color: #111;
   background-color: #fff;
 }
+
+a {
+  &:link,
+  &:visited {
+    color: rgb(0, 136, 238);
+    font-weight: bold;
+    text-decoration: none;
+  }
+
+  &:hover {
+    text-decoration: underline;
+  }
+
+  &.active {
+    color: #111;
+  }
+}
