--- a/one-list-firebase/src/styles/_utility.scss
+++ b/one-list-firebase/src/styles/_utility.scss
@@ -4,8 +4,7 @@ $base-text-size: 24px;
 $base-font-family: "Comfortaa", sans-serif;
 $alt-font-family: "Neucha", cursive;
 
-$theme-color-01: #5cadd6;
-$theme-color-02: #074863;
+$theme-color: #7241a8;
 
 // Remove the browsers built-in styling for lists elements.
 @mixin reset-list {
