Things from last week

--- a/one-list-auth/src/styles/_utility.scss
+++ b/one-list-auth/src/styles/_utility.scss
@@ -4,7 +4,7 @@ $base-text-size: 24px;
 $base-font-family: "Comfortaa", sans-serif;
 $alt-font-family: "Neucha", cursive;
 
-$theme-color: #7241a8;
+$theme-color: #d96e57;
 
 // Remove the browsers built-in styling for lists elements.
 @mixin reset-list {
