--- a/the-majestic-that/src/styles/layout.scss
+++ b/the-majestic-that/src/styles/layout.scss
@@ -1,10 +1,10 @@
 body,
 #root,
-.layout {
+.App {
   min-height: 100vh;
 }
 
-.layout {
+.App {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,6 +27,10 @@ nav ul {
 
   li {
     margin: 1em;
+
+    a.active {
+      font-weight: bold;
+    }
   }
 }
 
