--- a/pong/src/styles/_utility.scss
+++ b/pong/src/styles/_utility.scss
@@ -16,7 +16,8 @@ $base-font-family: sans-serif;
   height: 100%;
 
   body,
-  #root {
-    min-height: 100%;
+  #root,
+  #root > div {
+    height: 100vh;
   }
 }
